--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,5 +15,8 @@ parameters:
     mailer_user: ~
     mailer_password: ~
 
+    email_from: ~
+    email_admin: ~
+
     # A secret key that's used to generate certain security-related tokens
     secret: ThisTokenIsNotSoSecretChangeIt
